--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="./logo.svg" />
     <title>McDonald's</title>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6688209951213725"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>
